fix align

--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -602,7 +602,6 @@
 
   /* footer */
   .footer-section .footer-list .icon-list-box1 li {
-    padding-left: 10px;
     margin-bottom: 12px;
     font-size: 16px !important;
   }
@@ -1911,6 +1910,13 @@
   .footer-section .footer-bar .footer-bar-content p {
     font-size: 16px;
     line-height: 16px;
+  }
+
+  .footer-section .contact-list {
+    padding-left: 0px;
+  }
+  .footer-section .useful-footer {
+    padding-left: 0px;
   }
 
   /* about-page */
